Fixes on the homework and fixing the css and scss

--- a/Lesson_7/styles/main.css
+++ b/Lesson_7/styles/main.css
@@ -2,97 +2,116 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     color: #000;
 }
- 
+
+.header{
+    padding: 35px 0 17px;
+}
+
 .container{
     max-width: 1126px;
     width: 90%;
     margin: 0 auto;
 }
 
-/* Header Styles */
-
-.header {
-    padding: 35px 0 17px;
+img{
+    width: 100%;
+    display: block;
 }
 
-.main_logo,
-.nav,
-.header_buttons,
-.hero,
-.introduction,
-.hero_image{
+.header__logo{
+    width: 174px;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
     display: inline-block;
-    vertical-align: middle;
 }
 
-
-.main_logo img {
-    width: 175px;
-}
-
-/* Navigation Styles */
-
-ul {
+ul{
     list-style: none;
     padding: 0;
 }
 
-.menu li {
+.header__logo, .header__nav,.header__buttons{
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.header__nav{
+    margin:0px;
+    padding-right: 60px;
+    width: 60%;
+    text-align: right;
+}
+
+.header__nav .button{
+    margin-right: 12px;
+}
+
+.header__menu{
+    margin: 0px;
+    padding: 0px;
+}
+
+.header__menu li{
     display: inline-block;
     vertical-align: middle;
     margin-right: 35px;
 }
 
-.menu li:last-child {
-    margin-right: 60px;
+
+.header__menu li:hover{
+    color: #ffa41b;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
 
-.nav{
-    width: 60%;
-    text-align: right;
-}
-
-li a:hover {
+button{
+    background: none;
+    outline: none;
+    border: none;
     cursor: pointer;
-    text-decoration: underline;
 }
 
-/* Button Styles */
-
-button {
-    width: 100px;
-    height: 45px;
-    font-weight: bold;
-    border: 3px grey;
-    border-radius: 3px;
+.button {
     padding: 12px 20px;
+    text-align: center;
+    border: 1px solid #BCD0E5;
+    border-radius: 4px;
+    color: #22343D;
+    font-weight: 700;
 }
 
-button:hover {
-    text-decoration: underline;
-    cursor: pointer;
-    text-transform:uppercase;
+.button:hover {
+    border: 1px solid #e4e4e4;
+    background-color: #e4e4e4;
 }
 
-.action {
-    background-color: #ff9900;
-    color: #fff;
+
+.button.action {
+    color: white;
+    background-color: #ffa41b;
+    border: none;
+    display: inline-block;
 }
 
+.button.action:hover {
+    border: none;
+    background-color: #bb7204;
+}
+
+.header__buttons .button{
+    margin-right: 12px;
+}
 
 .hero{
     padding-top: 40px;
+    font-size: 0;
 }
 
 .main_title{
@@ -101,97 +120,107 @@ button:hover {
     font-weight: bold;
 }
 
-.introduction:first-child{
-    width: 45%;
-}
-
-.introduction:last-child{
-    width: 45%;
-    padding-left: 10px;
-}
-
-.title_details{
-    font-size: 18px;
-    color:#544837;
-    line-height: 28px;
-    max-width: 458px;
-    padding: 30px 0 30px 0;
-}
-
-/* Button Sizes */
-
-.started_button{
-    width: 140px;
-}
-
-.watch_video_button {
-    width: 190px;
-    height: auto;
-    background-color: #fff;
-    text-decoration: underline;
-    color: #ff9900;
-}
-
-
-.triangle {
-    width: 10px;
-    margin-right: 10px;
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.hero_image img {
-    max-width: 800px;
-    height: auto;
-    margin-left: 650px;
-    margin-top: -400px;
-}
-
-.feature {
-    padding-top: 120px;
-}
-
-h2{
-    margin: 0 auto;
-    font-size: 36px;
-    text-align: center;
-    width: 520px;
-    padding-bottom: 60px;
-    line-height: 48px;
-}
-
-.column.cards{
-    max-width: 270px;
-    width: 25%;
-}
-
 .column{
     display: inline-block;
     vertical-align: top;
+}
+
+.column:first-child{
+    width: 45%;
+}
+
+.column:last-child{
+    width: 45%;
+    padding-left: 10%;
+}
+
+.title_details{
+    color:#544837;
+    font-size: 18px;
+    line-height: 28px;
+    width: 100%;
+    max-width: 458px;
+    font-weight: 400;
+    padding: 30px 0 30px 0;
+}
+
+.image{
+    max-width: 800px;
+    display: inline-block;
+    width: 100%;
+}
+
+.watch_video_button{
+  color:#ff9900;
+  width: 180px;
+  font-size: 12px;
+  padding: 9px 20px;  
+}
+
+.triangle{
+   max-width: 18px;
+   margin-right: 8px;
+   display: inline-block;
+   vertical-align: middle; 
+}
+
+.watch_text{
+   display: inline-block;
+   vertical-align: middle;
+   text-decoration: underline;
+   font-size: 16px;
+   line-height: 18px; 
+}
+
+
+.feature, .professional{
+    padding-top: 120px;
+    font-size: 0;
+}
+
+h3, p {
+    margin: 0;
+    padding: 0;
+}
+
+h2{
+    font-size: 35px;
+    line-height: 48px;
+    font-weight: bold;
+    margin: auto;
+    text-align: center;
+    max-width: 520px;
+    padding-bottom: 60px;
+}
+
+.column.cards {
+    max-width: 270px;
+    width: 25%;
 }
 
 .icon{
     max-height: 18px;
     max-width: 18px;
     padding: 16px;
-    border-radius: 20px;
+    border-radius: 19px;
 }
 
-.pointer_icon{
+.pointer_icon {
     background-color: #7752be;
 }
 
-.survey_icon{
-    background-color:#fab005
+.survey_icon {
+    background-color: #fab005
 }
 
-.preference_icon{
-    background-color:#f03e3d;
+.preference_icon {
+    background-color: #f03e3d;
 }
 
-.hourglass_icon{
+.hourglass_icon {
     background-color: #4dadf7;
 }
+
 
 
 .details{
@@ -202,50 +231,37 @@ h2{
 .title_detail{
     font-size: 22px;
     font-weight: bold;
-    margin:0;
+    margin: 0;
     padding-bottom: 12px;
 }
 
 .deets{
-    font-size:16px;
+    font-size: 16px;
     font-weight: 400;
-    margin: 0;
+    margin:0;
 }
 
-.mid_sign_up > button{
-    display: block;
-    margin: 0 auto;
-    margin-top: 60px;
-    text-align: center;
-    padding: 15px;
-}
-
-.mid_sign_up>button:hover{
-    text-decoration: underline;
+.mid_sign_up{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 60px;
 }
 
 .professional{
     margin-top: 120px;
 }
 
-
-.professional .pros{
+.professional .image{
     max-width: 520px;
     width: 100%;
 }
 
 .section_title{
-    font-size: 36px;
-    font-weight: bold;
-    width: 520px;
-    padding-bottom: 5px;
-    margin-top: 5px;
-}
-
-.point .point_title{
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 8px;   
+  font-size: 36px;  
+  font-weight: bold;
+  width: 520px;
+  padding-bottom: 30px;
 }
 
 .point{
@@ -253,18 +269,10 @@ h2{
     padding-top: 28px;
 }
 
-.pros{
-    display: inline-block;
-    margin-left: 650px;
-    margin-bottom: -585px;
-}
-
-p.deets{
-    max-width: 450px;
-}
-
-.managers{
-    margin-left: 65px;
+.point .point_title{
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 8px;
 }
 
 .checklist{
@@ -275,54 +283,75 @@ p.deets{
 .check{
     height: 12px;
     width: 16px;
-    padding: 12px 10px;
-    border-radius: 15px;
+    padding: 11px 9px;
+    border-radius: 14px;
     background-color: #ff9900;
 }
 
-main{
-    border-bottom:1px solid rgba(188,208,229,0.5);
+main {
+    border-bottom: 1px solid rgba(188, 208, 229, 0.5);
     padding-bottom: 120px;
 }
 
-.footer{
-    padding-top:120px;
-    padding-bottom:80px;
+.footer {
+    padding-top: 120px;
+    padding-bottom: 80px;
 }
 
-.footer_nav{
+.footer_nav {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
 }
 
-.footer_nav .column{
+.footer_nav .column {
     display: inline-block;
     width: 25%;
+    padding: 0;
 }
 
-.email{
+.email {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-end;
-    gap:10px;
+    gap: 10px;
 }
 
-.email_sign{
+.email_sign {
     height: 35px;
     width: 100%;
     border: 1px solid #bcd0ef;
     border-radius: 4px;
 }
 
-.email_sign:hover{
-    border: 3px solid #ff9900;
+.email_sign:hover {
+    border: 1px solid #ff9900;
 }
 
-.email_sign:active, .email_sign:focus, .email_sign::selection{
+.email_sign:active,
+.email_sign:focus,
+.email_sign::selection {
     outline: 1px solid #ff9900;
     background-color: #f5f5f5;
 }
+
+.nav_item:hover{
+    color: #ffa41b;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
