--- a/Lesson_8/styles/main.scss
+++ b/Lesson_8/styles/main.scss
@@ -1,8 +1,3 @@
-// Global styles 
-
-// $button-color:#ff9900;
-// $decoration:$decoration;
-
 %display-middle{
     display: inline-block;
     vertical-align: middle;
@@ -28,6 +23,7 @@ body{
     width: 90%;
     margin: 0 auto;
 }
+
 
 img{
     width: 100%;
@@ -67,7 +63,6 @@ ul{
     }
   }
 }
-
 
 .header {
   &__menu {
@@ -119,7 +114,6 @@ button {
   }
 }
 
-
 .header__buttons .button{
     margin-right: 12px;
 }
@@ -129,18 +123,17 @@ button {
     font-size: 0;
 }
 
-.main_title{
+.hero__title{
     font-size: 44px;
     line-height: 55px;
     font-weight: bold;
 }
 
+.column, .professional__column, .footer__signup{
+    display: inline-block;
+    vertical-align: top;
 
-.column {
-  display: inline-block;
-  vertical-align: top;
-
-  &:first-child {
+    &:first-child {
     width: 45%;
   }
 
@@ -148,10 +141,10 @@ button {
     width: 45%;
     padding-left: 10%;
   }
+
 }
 
-
-.title_details{
+.hero__description{
     color:#544837;
     font-size: 18px;
     line-height: 28px;
@@ -161,11 +154,6 @@ button {
     padding: 30px 0 30px 0;
 }
 
-.image{
-    max-width: 800px;
-    display: inline-block;
-    width: 100%;
-}
 
 .watch_video_button{
   color:#ff9900;
@@ -180,21 +168,23 @@ button {
   @extend %display-middle;
 }
 
-.watch_text{
+.hero__watch-text{
    @extend %display-middle;
    text-decoration: underline;
    font-size: 16px;
    line-height: 18px; 
 }
 
+
+.image{
+    max-width: 800px;
+    display: inline-block;
+    width: 100%;
+}
+
 .feature, .professional{
     padding-top: 120px;
     font-size: 0;
-}
-
-h3, p {
-    margin: 0;
-    padding: 0;
 }
 
 h2{
@@ -207,61 +197,67 @@ h2{
     padding-bottom: 60px;
 }
 
-.column.cards {
-    max-width: 270px;
-    width: 25%;
+h3,p {
+    margin: 0;
+    padding: 0;
 }
 
-.icon{
+.feature__card.feature__card--container {
+    max-width: 270px;
+    width: 25%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.feature__icon{
     max-height: 18px;
     max-width: 18px;
     padding: 16px;
     border-radius: 19px;
 }
 
-.icon {
-    &.pointer_icon {
+.feature__icon {
+    &--pointer {
         background-color: #7752be;
     }
 
-    &.survey_icon {
+    &--survey{
         background-color: #fab005;
     }
 
-    &.preference_icon {
+    &--preference{
         background-color: #f03e3d;
     }
 
-    &.hourglass_icon {
+    &--hourglass {
         background-color: #4dadf7;
     }
 }
 
-.details{
+.feature__details{
     max-width: 200px;
     padding-top: 28px;
 }
 
-.title_detail{
+.feature__detail-title{
     font-size: 22px;
     font-weight: bold;
     margin: 0;
     padding-bottom: 12px;
 }
 
-.deets{
+.feature__description, .professional__text, .professional__description, .professional__point-description{
     font-size: 16px;
     font-weight: 400;
     margin:0;
 }
 
-.mid_sign_up{
+.feature__sign-up{
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 60px;
 }
-
 
 .professional {
     margin-top: 120px;
@@ -272,29 +268,35 @@ h2{
     }
 }
 
-.point {
+.professional__title{
+    font-size: 36px;
+    font-weight: bold;
+    width: 520px;
+    padding-bottom: 30px;
+}
+
+.professional__point{
     max-width: 480px;
     padding-top: 28px;
 
-    .point_title {
+    .professional__point-title{
         font-size: 16px;
         font-weight: bold;
         margin-bottom: 8px;
     }
 }
 
-
-.checklist{
+.professional__list-item--checklist{
     display: flex;
     gap: 20px;
 }
 
-.check{
+.professional__check-icon{
     height: 12px;
     width: 16px;
     padding: 11px 9px;
     border-radius: 14px;
-    background-color: #ff9900;
+    background-color: #ff9900; 
 }
 
 main {
@@ -302,25 +304,24 @@ main {
     padding-bottom: 120px;
 }
 
-
 .footer {
     padding-top: 120px;
     padding-bottom: 80px;
 }
 
-.footer_nav {
+.footer__navigation {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
 
-    .column { 
+    .footer__list { 
         display: inline-block;
         width: 25%;
         padding: 0;
     }
 }
 
-.email {
+.footer__email {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -328,11 +329,11 @@ main {
     gap: 10px;
 }
 
-.email_sign {
-    height: 35px;
+.footer__input{
+   height: 35px;
     width: 100%;
     border: 1px solid #bcd0ef;
-    border-radius: 4px;
+    border-radius: 4px; 
 
     &:hover {
         border: 1px solid #ff9900;
@@ -346,7 +347,6 @@ main {
     }
 }
 
-
-.nav_item:hover{
-    color: #ffa41b;
+.footer__link:hover{
+    color:#ffa41b;
 }
