--- a/Lesson_8/styles/main.css
+++ b/Lesson_8/styles/main.css
@@ -1,4 +1,4 @@
-.hero__watch-text, .triangle, .header__logo, .header__nav, .header__buttons {
+.triangle, .hero__watch-text, .header__menu li, .header__logo, .header__nav, .header__buttons {
   display: inline-block;
   vertical-align: middle;
 }
@@ -9,12 +9,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   color: #000;
-  background: #3ab1b4;
   background: linear-gradient(90deg, #3ab1b4 0%, #e7d9d9 84%, #fcb045 100%);
-}
-
-.header {
-  padding: 35px 0 17px;
 }
 
 .container {
@@ -28,10 +23,6 @@ img {
   display: block;
 }
 
-.header__logo {
-  width: 174px;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -43,8 +34,14 @@ ul {
   padding: 0;
 }
 
+.header {
+  padding: 35px 0 17px;
+}
+.header__logo {
+  width: 174px;
+}
 .header__nav {
-  margin: 0px;
+  margin: 0;
   padding-right: 60px;
   width: 60%;
   text-align: right;
@@ -52,18 +49,15 @@ ul {
 .header__nav .button {
   margin-right: 12px;
 }
-
 .header__menu {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 .header__menu li {
-  display: inline-block;
-  vertical-align: middle;
   margin-right: 35px;
 }
 .header__menu li:hover {
-  color: #ffa41b;
+  color: #ff9900;
 }
 
 button {
@@ -82,55 +76,39 @@ button {
   font-weight: 700;
 }
 .button:hover {
-  border: 1px solid #e4e4e4;
+  border-color: #e4e4e4;
   background-color: #e4e4e4;
 }
 .button.action {
   color: white;
-  background-color: #ffa41b;
+  background-color: #ff9900;
   border: none;
-  display: inline-block;
 }
 .button.action:hover {
-  border: none;
-  background-color: #bb7204;
-}
-
-.header__buttons .button {
-  margin-right: 12px;
+  background-color: #b36b00;
 }
 
 .hero {
   padding-top: 40px;
   font-size: 0;
 }
-
 .hero__title {
   font-size: 44px;
   line-height: 55px;
   font-weight: bold;
 }
-
-.column, .professional__column, .footer__signup {
-  display: inline-block;
-  vertical-align: top;
-}
-.column:first-child, .professional__column:first-child, .footer__signup:first-child {
-  width: 45%;
-}
-.column:last-child, .professional__column:last-child, .footer__signup:last-child {
-  width: 45%;
-  padding-left: 10%;
-}
-
 .hero__description {
   color: #544837;
   font-size: 18px;
   line-height: 28px;
-  width: 100%;
   max-width: 458px;
   font-weight: 400;
-  padding: 30px 0 30px 0;
+  padding: 30px 0;
+}
+.hero__watch-text {
+  text-decoration: underline;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 .watch_video_button {
@@ -145,21 +123,132 @@ button {
   margin-right: 8px;
 }
 
-.hero__watch-text {
-  text-decoration: underline;
-  font-size: 16px;
-  line-height: 18px;
-}
-
-.image {
-  max-width: 800px;
+.column, .professional__column, .footer__signup {
   display: inline-block;
-  width: 100%;
+  vertical-align: top;
+}
+.column:first-child, .professional__column:first-child, .footer__signup:first-child {
+  width: 45%;
+}
+.column:last-child, .professional__column:last-child, .footer__signup:last-child {
+  width: 45%;
+  padding-left: 10%;
 }
 
 .feature, .professional {
   padding-top: 120px;
   font-size: 0;
+}
+.feature__card.feature__card--container {
+  max-width: 270px;
+  width: 25%;
+  display: inline-block;
+  vertical-align: top;
+}
+.feature__icon {
+  max-height: 18px;
+  max-width: 18px;
+  padding: 16px;
+  border-radius: 19px;
+}
+.feature__icon--pointer {
+  background-color: #7752be;
+}
+.feature__icon--survey {
+  background-color: #fab005;
+}
+.feature__icon--preference {
+  background-color: #f03e3d;
+}
+.feature__icon--hourglass {
+  background-color: #4dadf7;
+}
+.feature__details {
+  max-width: 200px;
+  padding-top: 28px;
+}
+.feature__detail-title {
+  font-size: 22px;
+  font-weight: bold;
+  margin: 0;
+  padding-bottom: 12px;
+}
+.feature__sign-up {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 60px;
+}
+
+.professional {
+  margin-top: 120px;
+}
+.professional .image {
+  max-width: 520px;
+  width: 100%;
+}
+.professional__title {
+  font-size: 36px;
+  font-weight: bold;
+  width: 520px;
+  padding-bottom: 30px;
+}
+.professional__point {
+  max-width: 480px;
+  padding-top: 28px;
+}
+.professional__point-title {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+.professional__list-item--checklist {
+  display: flex;
+  gap: 20px;
+}
+.professional__check-icon {
+  height: 12px;
+  width: 16px;
+  padding: 11px 9px;
+  border-radius: 14px;
+  background-color: #ff9900;
+}
+
+.footer {
+  padding: 120px 0 80px;
+}
+.footer__navigation {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+.footer__navigation .footer__list {
+  display: inline-block;
+  width: 25%;
+  padding: 0;
+}
+.footer__email {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  gap: 10px;
+}
+.footer__input {
+  height: 35px;
+  width: 100%;
+  border: 1px solid #BCD0E5;
+  border-radius: 4px;
+}
+.footer__input:hover {
+  border-color: #ff9900;
+}
+.footer__input:active, .footer__input:focus, .footer__input::selection {
+  outline: 1px solid #ff9900;
+  background-color: #f5f5f5;
+}
+.footer__link:hover {
+  color: #ff9900;
 }
 
 h2 {
@@ -177,139 +266,16 @@ h3, p {
   padding: 0;
 }
 
-.feature__card.feature__card--container {
-  max-width: 270px;
-  width: 25%;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.feature__icon {
-  max-height: 18px;
-  max-width: 18px;
-  padding: 16px;
-  border-radius: 19px;
-}
-
-.feature__icon--pointer {
-  background-color: #7752be;
-}
-.feature__icon--survey {
-  background-color: #fab005;
-}
-.feature__icon--preference {
-  background-color: #f03e3d;
-}
-.feature__icon--hourglass {
-  background-color: #4dadf7;
-}
-
-.feature__details {
-  max-width: 200px;
-  padding-top: 28px;
-}
-
-.feature__detail-title {
-  font-size: 22px;
-  font-weight: bold;
-  margin: 0;
-  padding-bottom: 12px;
-}
-
-.feature__description, .professional__text, .professional__description, .professional__point-description {
+.feature__description,
+.professional__text,
+.professional__description,
+.professional__point-description {
   font-size: 16px;
   font-weight: 400;
   margin: 0;
 }
 
-.feature__sign-up {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 60px;
-}
-
-.professional {
-  margin-top: 120px;
-}
-.professional .image {
-  max-width: 520px;
-  width: 100%;
-}
-
-.professional__title {
-  font-size: 36px;
-  font-weight: bold;
-  width: 520px;
-  padding-bottom: 30px;
-}
-
-.professional__point {
-  max-width: 480px;
-  padding-top: 28px;
-}
-.professional__point .professional__point-title {
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 8px;
-}
-
-.professional__list-item--checklist {
-  display: flex;
-  gap: 20px;
-}
-
-.professional__check-icon {
-  height: 12px;
-  width: 16px;
-  padding: 11px 9px;
-  border-radius: 14px;
-  background-color: #ff9900;
-}
-
 main {
   border-bottom: 1px solid rgba(188, 208, 229, 0.5);
   padding-bottom: 120px;
-}
-
-.footer {
-  padding-top: 120px;
-  padding-bottom: 80px;
-}
-
-.footer__navigation {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-.footer__navigation .footer__list {
-  display: inline-block;
-  width: 25%;
-  padding: 0;
-}
-
-.footer__email {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-end;
-  gap: 10px;
-}
-
-.footer__input {
-  height: 35px;
-  width: 100%;
-  border: 1px solid #bcd0ef;
-  border-radius: 4px;
-}
-.footer__input:hover {
-  border: 1px solid #ff9900;
-}
-.footer__input:active, .footer__input:focus, .footer__input::selection {
-  outline: 1px solid #ff9900;
-  background-color: #f5f5f5;
-}
-
-.footer__link:hover {
-  color: #ffa41b;
 }
