--- a/Lesson_8/styles/main.scss
+++ b/Lesson_8/styles/main.scss
@@ -1,59 +1,77 @@
-%display-middle{
-    display: inline-block;
-    vertical-align: middle;
+// Variables
+$primary-color: #ff9900;
+$secondary-color: #22343D;
+$border-color: #BCD0E5;
+$text-color: #544837;
+$background-gradient: linear-gradient(90deg, rgba(58,177,180,1) 0%, rgba(231,217,217,1) 84%, rgba(252,176,69,1) 100%);
+
+// Mixins
+@mixin flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
-body{
-    font-family: "Poppins", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: #000;
-    background: rgb(58,177,180);
-    background: linear-gradient(90deg, rgba(58,177,180,1) 0%, rgba(231,217,217,1) 84%, rgba(252,176,69,1) 100%);
+@mixin hover-effect {
+  &:hover {
+    color: $primary-color;
+  }
 }
 
-.header{
-    padding: 35px 0 17px;
+// Placeholders
+%display-middle {
+  display: inline-block;
+  vertical-align: middle;
 }
 
-.container{
-    max-width: 1126px;
-    width: 90%;
-    margin: 0 auto;
+// Global Styles
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #000;
+  background: $background-gradient;
 }
 
-
-img{
-    width: 100%;
-    display: block;
+.container {
+  max-width: 1126px;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.header__logo{
-    width: 174px;
+img {
+  width: 100%;
+  display: block;
 }
 
-a{
-    color: inherit;
-    text-decoration: none;
-    display: inline-block;
+a {
+  color: inherit;
+  text-decoration: none;
+  display: inline-block;
 }
 
-ul{
-    list-style: none;
-    padding: 0;
+ul {
+  list-style: none;
+  padding: 0;
 }
 
+// Header Styles
 .header {
+  padding: 35px 0 17px;
+
   &__logo,
   &__nav,
   &__buttons {
-    @extend %display-middle
+    @extend %display-middle;
+  }
+
+  &__logo {
+    width: 174px;
   }
 
   &__nav {
-    margin: 0px;
+    margin: 0;
     padding-right: 60px;
     width: 60%;
     text-align: right;
@@ -62,25 +80,20 @@ ul{
       margin-right: 12px;
     }
   }
-}
 
-.header {
   &__menu {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 
     li {
-      display: inline-block;
-      vertical-align: middle;
+      @extend %display-middle;
       margin-right: 35px;
-
-      &:hover {
-        color: #ffa41b;
-      }
+      @include hover-effect;
     }
   }
 }
 
+// Button Styles
 button {
   background: none;
   outline: none;
@@ -91,262 +104,237 @@ button {
 .button {
   padding: 12px 20px;
   text-align: center;
-  border: 1px solid #BCD0E5;
+  border: 1px solid $border-color;
   border-radius: 4px;
-  color: #22343D;
+  color: $secondary-color;
   font-weight: 700;
 
   &:hover {
-    border: 1px solid #e4e4e4;
+    border-color: #e4e4e4;
     background-color: #e4e4e4;
   }
 
   &.action {
     color: white;
-    background-color: #ffa41b;
+    background-color: $primary-color;
     border: none;
-    display: inline-block;
 
     &:hover {
-      border: none;
-      background-color: #bb7204;
+      background-color: darken($primary-color, 15%);
     }
   }
 }
 
-.header__buttons .button{
-    margin-right: 12px;
-}
+// Hero Section
+.hero {
+  padding-top: 40px;
+  font-size: 0;
 
-.hero{
-    padding-top: 40px;
-    font-size: 0;
-}
-
-.hero__title{
+  &__title {
     font-size: 44px;
     line-height: 55px;
     font-weight: bold;
-}
-
-.column, .professional__column, .footer__signup{
-    display: inline-block;
-    vertical-align: top;
-
-    &:first-child {
-    width: 45%;
   }
 
-  &:last-child {
-    width: 45%;
-    padding-left: 10%;
-  }
-
-}
-
-.hero__description{
-    color:#544837;
+  &__description {
+    color: $text-color;
     font-size: 18px;
     line-height: 28px;
-    width: 100%;
     max-width: 458px;
     font-weight: 400;
-    padding: 30px 0 30px 0;
+    padding: 30px 0;
+  }
+
+  &__watch-text {
+    @extend %display-middle;
+    text-decoration: underline;
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
 
-
-.watch_video_button{
-  color:#ff9900;
+.watch_video_button {
+  color: $primary-color;
   width: 180px;
   font-size: 12px;
-  padding: 9px 20px;  
+  padding: 9px 20px;
 }
 
-.triangle{
-   max-width: 18px;
-   margin-right: 8px;
+.triangle {
+  max-width: 18px;
+  margin-right: 8px;
   @extend %display-middle;
 }
 
-.hero__watch-text{
-   @extend %display-middle;
-   text-decoration: underline;
-   font-size: 16px;
-   line-height: 18px; 
+// Column Styles
+.column, .professional__column, .footer__signup {
+  display: inline-block;
+  vertical-align: top;
+
+  &:first-child { width: 45%; }
+  &:last-child { 
+    width: 45%;
+    padding-left: 10%;
+  }
 }
 
+// Feature Section
+.feature {
+  padding-top: 120px;
+  font-size: 0;
 
-.image{
-    max-width: 800px;
-    display: inline-block;
-    width: 100%;
-}
+  &__card {
+    &.feature__card--container {
+      max-width: 270px;
+      width: 25%;
+      display: inline-block;
+      vertical-align: top;
+    }
+  }
 
-.feature, .professional{
-    padding-top: 120px;
-    font-size: 0;
-}
-
-h2{
-    font-size: 35px;
-    line-height: 48px;
-    font-weight: bold;
-    margin: auto;
-    text-align: center;
-    max-width: 520px;
-    padding-bottom: 60px;
-}
-
-h3,p {
-    margin: 0;
-    padding: 0;
-}
-
-.feature__card.feature__card--container {
-    max-width: 270px;
-    width: 25%;
-    display: inline-block;
-    vertical-align: top;
-}
-
-.feature__icon{
+  &__icon {
     max-height: 18px;
     max-width: 18px;
     padding: 16px;
     border-radius: 19px;
-}
 
-.feature__icon {
-    &--pointer {
-        background-color: #7752be;
-    }
+    &--pointer { background-color: #7752be; }
+    &--survey { background-color: #fab005; }
+    &--preference { background-color: #f03e3d; }
+    &--hourglass { background-color: #4dadf7; }
+  }
 
-    &--survey{
-        background-color: #fab005;
-    }
-
-    &--preference{
-        background-color: #f03e3d;
-    }
-
-    &--hourglass {
-        background-color: #4dadf7;
-    }
-}
-
-.feature__details{
+  &__details {
     max-width: 200px;
     padding-top: 28px;
-}
+  }
 
-.feature__detail-title{
+  &__detail-title {
     font-size: 22px;
     font-weight: bold;
     margin: 0;
     padding-bottom: 12px;
-}
+  }
 
-.feature__description, .professional__text, .professional__description, .professional__point-description{
-    font-size: 16px;
-    font-weight: 400;
-    margin:0;
-}
-
-.feature__sign-up{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  &__sign-up {
+    @include flex-center;
     padding-top: 60px;
+  }
 }
 
+// Professional Section
 .professional {
-    margin-top: 120px;
+  @extend .feature;
+  margin-top: 120px;
 
-    .image {
-        max-width: 520px;
-        width: 100%; 
-    }
-}
+  .image {
+    max-width: 520px;
+    width: 100%;
+  }
 
-.professional__title{
+  &__title {
     font-size: 36px;
     font-weight: bold;
     width: 520px;
     padding-bottom: 30px;
-}
+  }
 
-.professional__point{
+  &__point {
     max-width: 480px;
     padding-top: 28px;
 
-    .professional__point-title{
-        font-size: 16px;
-        font-weight: bold;
-        margin-bottom: 8px;
+    &-title {
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 8px;
     }
-}
+  }
 
-.professional__list-item--checklist{
+  &__list-item--checklist {
     display: flex;
     gap: 20px;
-}
+  }
 
-.professional__check-icon{
+  &__check-icon {
     height: 12px;
     width: 16px;
     padding: 11px 9px;
     border-radius: 14px;
-    background-color: #ff9900; 
+    background-color: $primary-color;
+  }
 }
 
-main {
-    border-bottom: 1px solid rgba(188, 208, 229, 0.5);
-    padding-bottom: 120px;
-}
-
+// Footer Styles
 .footer {
-    padding-top: 120px;
-    padding-bottom: 80px;
-}
+  padding: 120px 0 80px;
 
-.footer__navigation {
+  &__navigation {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
 
-    .footer__list { 
-        display: inline-block;
-        width: 25%;
-        padding: 0;
+    .footer__list {
+      display: inline-block;
+      width: 25%;
+      padding: 0;
     }
-}
+  }
 
-.footer__email {
+  &__email {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-end;
     gap: 10px;
-}
+  }
 
-.footer__input{
-   height: 35px;
+  &__input {
+    height: 35px;
     width: 100%;
-    border: 1px solid #bcd0ef;
-    border-radius: 4px; 
+    border: 1px solid $border-color;
+    border-radius: 4px;
 
-    &:hover {
-        border: 1px solid #ff9900;
-    }
+    &:hover { border-color: $primary-color; }
 
     &:active,
     &:focus,
     &::selection {
-        outline: 1px solid #ff9900;
-        background-color: #f5f5f5;
+      outline: 1px solid $primary-color;
+      background-color: #f5f5f5;
     }
+  }
+
+  &__link {
+    @include hover-effect;
+  }
 }
 
-.footer__link:hover{
-    color:#ffa41b;
+// Common Styles
+h2 {
+  font-size: 35px;
+  line-height: 48px;
+  font-weight: bold;
+  margin: auto;
+  text-align: center;
+  max-width: 520px;
+  padding-bottom: 60px;
+}
+
+h3, p {
+  margin: 0;
+  padding: 0;
+}
+
+.feature__description,
+.professional__text,
+.professional__description,
+.professional__point-description {
+  font-size: 16px;
+  font-weight: 400;
+  margin: 0;
+}
+
+main {
+  border-bottom: 1px solid rgba(188, 208, 229, 0.5);
+  padding-bottom: 120px;
 }
