--- a/Lesson_9/styles/main.css
+++ b/Lesson_9/styles/main.css
@@ -145,10 +145,13 @@ button {
   display: inline-block;
   vertical-align: top;
 }
-.feature i, .professional i {
-  color: #fff;
-}
 .feature__icon {
+  color: #fff;
+  box-sizing: border-box;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  text-align: center;
   font-size: 18px;
   padding: 16px;
   border-radius: 19px;
@@ -215,6 +218,7 @@ button {
   padding: 11px;
   border-radius: 14px;
   background-color: #ff9900;
+  color: #fff;
 }
 
 .footer {
