--- a/Lesson_8/styles/main.css
+++ b/Lesson_8/styles/main.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   color: #000;
-  background: linear-gradient(90deg, #3ab1b4 0%, #e7d9d9 84%, #fcb045 100%);
+  background: linear-gradient(90deg, rgb(58, 177, 180) 0%, rgb(231, 217, 217) 84%, rgb(252, 176, 69) 100%);
 }
 
 .container {
@@ -243,6 +243,10 @@ button {
 .footer__input:hover {
   border-color: #ff9900;
 }
+.footer__input::-moz-selection {
+  outline: 1px solid #ff9900;
+  background-color: #f5f5f5;
+}
 .footer__input:active, .footer__input:focus, .footer__input::selection {
   outline: 1px solid #ff9900;
   background-color: #f5f5f5;
@@ -278,4 +282,4 @@ h3, p {
 main {
   border-bottom: 1px solid rgba(188, 208, 229, 0.5);
   padding-bottom: 120px;
-}
+}/*# sourceMappingURL=main.css.map */
