--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     background-image: url('image/welcome_bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
@@ -22,13 +22,20 @@ h2 {
     margin-bottom: 20px;
 }
 
+.scrollable_list {
+    overflow-y: auto;
+    padding: 10px;
+}
+
 ul {
     list-style-type: none;
     padding: 0;
 }
 
 li {
-    margin: 10px 0;
+    margin: 4px 0;
+    padding: 5px;
+    border-bottom: 1px solid #eee;
 }
 
 a {
