--- a/Lesson_11/styles/main.scss
+++ b/Lesson_11/styles/main.scss
@@ -3,7 +3,7 @@ body {
     margin: 0;
     box-sizing: border-box;
     font-family: "Griffy", system-ui;
-    background-image: url("/Lesson_11/images/birthday_background.jpg");
+    background-image: url("../images/birthday_background.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
