--- a/Lesson_11/styles/main.scss
+++ b/Lesson_11/styles/main.scss
@@ -15,7 +15,8 @@ body {
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 350px;
+    max-width: 750px;
+    max-height: 750px;
     margin: auto;
     text-align: center;
     border-radius: 4px;
