--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     background-image: url('image/welcome_bg.jpg');
     background-repeat: no-repeat;
     background-position: center;
