--- a/Lesson_13/styles/_base.scss
+++ b/Lesson_13/styles/_base.scss
@@ -12,6 +12,22 @@ body {
     margin: 0 auto;
 }
 
+.small_container {
+    max-width: 775px;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+h1,
+h2,
+p,
+i {
+    margin: 0;
+    padding: 0;
+}
+
 a {
     text-decoration: none;
 }
