--- a/Lesson_13/styles/fonts.css
+++ b/Lesson_13/styles/fonts.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: "Avenir Next";
-  src: url("../Fonts/avenir/AvenirNext-Regular.ttf") format("truetype"), url("../Fonts/avenir/avenir/AvenirNext-Bold.ttf") format("truetype");
+  src: url("../Fonts/avenir/AvenirNext-Regular.ttf") format("truetype"), url("../Fonts/avenir/AvenirNext-Bold.ttf") format("truetype"), url("../Fonts/avenir/AvenirNext-demi-bold.ttf") format("truetype");
 }
