--- a/Lesson_13/styles/fonts.scss
+++ b/Lesson_13/styles/fonts.scss
@@ -2,6 +2,6 @@
     font-family: "Avenir Next";
     src:
         url('../Fonts/avenir/AvenirNext-Regular.ttf') format('truetype'),
-        url('../Fonts/avenir/avenir/AvenirNext-Bold.ttf') format('truetype');
-
+        url('../Fonts/avenir/AvenirNext-Bold.ttf') format('truetype'),
+        url('../Fonts/avenir/AvenirNext-demi-bold.ttf') format('truetype');
 }
