--- a/Lesson_13/styles/main.css
+++ b/Lesson_13/styles/main.css
@@ -39,7 +39,7 @@ header {
 
 @font-face {
   font-family: "Avenir Next";
-  src: url("../Fonts/avenir/AvenirNext-Regular.ttf") format("truetype"), url("../Fonts/avenir/avenir/AvenirNext-Bold.ttf") format("truetype");
+  src: url("../Fonts/avenir/AvenirNext-Regular.ttf") format("truetype"), url("../Fonts/avenir/AvenirNext-Bold.ttf") format("truetype"), url("../Fonts/avenir/AvenirNext-demi-bold.ttf") format("truetype");
 }
 body {
   font-family: Avenir Next, Arial, Helvetica, sans-serif;
@@ -53,6 +53,146 @@ body {
   margin: 0 auto;
 }
 
+.small_container {
+  max-width: 775px;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+h1,
+h2,
+p,
+i {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   text-decoration: none;
+}
+
+.btn {
+  width: 336px;
+  height: 60px;
+  border: none;
+  background-color: #FF7F57;
+  color: #fff;
+  text-transform: capitalize;
+  text-align: center;
+  font-size: 17px;
+  cursor: pointer;
+  transition: all 0.5s ease-in;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+}
+.btn:hover {
+  transform: translateX(10px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  background-color: #d9623d;
+}
+
+.heading {
+  color: #13253A;
+  font-weight: 700;
+}
+
+.description {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 27px;
+  padding-bottom: 20px;
+}
+
+.intro_text {
+  font-size: 16px;
+  color: #2557ab;
+  padding-bottom: 5px;
+  text-transform: capitalize;
+}
+
+.hero {
+  background-color: #f4f6f7;
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.hero_contents {
+  display: flex;
+  align-items: center;
+  gap: 130px;
+}
+.hero_contents .heading {
+  font-size: 46px;
+  padding-bottom: 10px;
+  letter-spacing: -1px;
+  font-weight: 700;
+}
+
+.column {
+  flex: 1;
+}
+
+.cards {
+  display: flex;
+  gap: 30px;
+}
+
+.banner {
+  padding-top: 120px;
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.banner .heading {
+  font-size: 20px;
+  padding-bottom: 5px;
+}
+.banner .description {
+  text-align: center;
+}
+
+.banner .column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.banner_title {
+  color: #13253A;
+  font-size: 38px;
+  letter-spacing: -0.5px;
+  padding-bottom: 30px;
+}
+
+.banner_icon {
+  padding-bottom: 20px;
+  width: 64px;
+  height: 64px;
+  flex-shrink: 0;
+}
+
+.metrics {
+  background-color: #f4f6f7;
+}
+.metrics .small_container {
+  display: flex;
+  justify-content: center;
+}
+.metrics .cards {
+  gap: 125px;
+}
+
+.indexes {
+  display: flex;
+}
+.indexes .heading {
+  color: #13253A;
+  font-size: 46px;
+}
+
+.icon {
+  color: #FF7F57;
+  font-size: 46px;
 }
