--- a/Lesson_12/styles/_vars.scss
+++ b/Lesson_12/styles/_vars.scss
@@ -2,9 +2,11 @@ $base_bg:#f4f6f7;
 $text-color:#13253A;
 $item_hover:#ff0000;
 $shadow:#000;
-$button_action:#FF7F57;
+$action:#FF7F57;
 $light:#fff;
-$btn_hover:#d9623d;
-$texts_size:16px;
+$primary_btn_hover:#d9623d;
 $intro_highlights:#2557ab;
 $border:#dce2e6;
+$begin:#2557ab;
+$contact_background:#11364e;
+$footer_background:#13253a;
