--- a/Lesson_12/styles/_section.css
+++ b/Lesson_12/styles/_section.css
@@ -51,6 +51,7 @@
   font-size: 38px;
   letter-spacing: -0.5px;
   padding-bottom: 30px;
+  font-weight: 400;
 }
 
 .banner_icon {
@@ -105,4 +106,121 @@
   gap: 73px;
   align-items: center;
   padding-top: 60px;
+  overflow: hidden;
+}
+
+.action {
+  padding-top: 100px;
+}
+
+.action_section {
+  display: flex;
+  align-items: center;
+  gap: 90px;
+}
+.action_section .heading {
+  font-size: 38px;
+  width: 370px;
+  padding-bottom: 20px;
+  font-weight: 700;
+}
+
+.client_logo {
+  width: 100%;
+  transition: transform 0.5s ease;
+}
+.client_logo:hover {
+  transform: scale(1.1);
+}
+
+.check_icon {
+  font-size: 16px;
+  color: #FF7F57;
+}
+
+.list_item {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+}
+
+.list_text {
+  color: #13253A;
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 27px;
+}
+.list_text:hover {
+  text-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
+}
+
+.website {
+  background-color: #FF7F57;
+}
+.website .small_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.website .intro_text {
+  color: #fff;
+}
+.website .heading {
+  color: #fff;
+  font-size: 46px;
+  letter-spacing: -1px;
+  padding-bottom: 10px;
+  font-weight: 600;
+}
+.website .description {
+  color: #fff;
+  text-align: center;
+}
+
+.contact {
+  padding-top: 140px;
+  padding-bottom: 140px;
+  background-color: #11364e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form_title {
+  color: #fff;
+  text-align: center;
+  font-size: 38px;
+  font-weight: 400;
+  letter-spacing: -0.5px;
+  padding-bottom: 30px;
+}
+
+.form_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form_item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer {
+  background-color: #13253a;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.copyright {
+  color: #fff;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 400;
+}
+.copyright:hover {
+  color: #ff0000;
 }
