--- a/Lesson_12/styles/_section.scss
+++ b/Lesson_12/styles/_section.scss
@@ -57,6 +57,7 @@
     font-size: 38px;
     letter-spacing: -0.5px;
     padding-bottom: 30px;
+    font-weight: 400;
 }
 
 .banner_icon {
@@ -89,7 +90,7 @@
     }
 
     .icon {
-        color: $button_action;
+        color: $action;
         font-size: 46px;
         font-weight: 100;
     }
@@ -117,4 +118,129 @@
     gap: 73px;
     align-items: center;
     padding-top: 60px;
+    overflow: hidden;
+}
+
+.action {
+    padding-top: 100px;
+}
+
+.action_section {
+    display: flex;
+    align-items: center;
+    gap: 90px;
+
+    .heading {
+        font-size: 38px;
+        width: 370px;
+        padding-bottom: 20px;
+        font-weight: 700;
+    }
+}
+
+.client_logo {
+    width: 100%;
+    transition: transform 0.5s ease;
+
+    &:hover {
+        transform: scale(1.1);
+    }
+}
+
+.check_icon {
+    font-size: 16px;
+    color: $action;
+}
+
+.list_item {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.list_text {
+    color: $text-color;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 27px;
+
+    &:hover {
+        text-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
+    }
+}
+
+.website {
+    background-color: $action;
+
+    .small_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    .intro_text {
+        color: $light;
+    }
+
+    .heading {
+        color: $light;
+        font-size: 46px;
+        letter-spacing: -1px;
+        padding-bottom: 10px;
+        font-weight: 600;
+    }
+
+    .description {
+        color: $light;
+        text-align: center;
+    }
+}
+
+.contact {
+    padding-top: 140px;
+    padding-bottom: 140px;
+    background-color: $contact_background;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form_title {
+    color: $light;
+    text-align: center;
+    font-size: 38px;
+    font-weight: 400;
+    letter-spacing: -0.5px;
+    padding-bottom: 30px;
+}
+
+.form_list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form_item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer {
+    background-color: $footer_background;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+.copyright {
+    color: $light;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 400;
+
+    &:hover {
+        color: $item_hover;
+    }
 }
