--- a/Lesson_12/styles/main.css
+++ b/Lesson_12/styles/main.css
@@ -115,6 +115,27 @@ a {
   background-color: #d9623d;
 }
 
+.get_started_button {
+  background-color: #2557ab;
+  box-shadow: 0 14px 18px rgba(0, 0, 0, 0.2);
+}
+.get_started_button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  background-color: #2557ab;
+  color: #ff0000;
+}
+
+.submit_button {
+  width: 370px;
+  height: 60px;
+  padding: 20px 100px;
+  margin-top: 36px;
+}
+.submit_button:hover {
+  transform: scale(1.1);
+}
+
 .heading {
   color: #13253A;
   font-weight: 700;
@@ -141,6 +162,61 @@ a {
   font-weight: 400;
   line-height: 30px;
   padding-bottom: 20px;
+}
+
+input {
+  outline: none;
+  border: none;
+  box-shadow: none;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+  width: 370px;
+  height: 28px;
+  flex-shrink: 0;
+  margin-top: 10px;
+  margin-bottom: 40px;
+  color: #fff;
+}
+input:hover {
+  border-bottom: 1px solid #fff;
+}
+input:focus {
+  border-bottom: 1px solid #FF7F57;
+}
+
+.input_field {
+  color: #fff;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.input_field::placeholder {
+  color: rgba(255, 255, 255, 0.25);
+  opacity: 1;
+}
+
+textarea {
+  outline: none;
+  border: none;
+  resize: none;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+  width: 370px;
+  height: 80px;
+  margin-top: 10px;
+  font-family: "Avenir Next";
+  color: #fff;
+}
+textarea:hover {
+  border-bottom: 1px solid #FF7F57;
+}
+textarea:hover::placeholder {
+  color: #fff;
 }
 
 .hero {
@@ -196,6 +272,7 @@ a {
   font-size: 38px;
   letter-spacing: -0.5px;
   padding-bottom: 30px;
+  font-weight: 400;
 }
 
 .banner_icon {
@@ -250,4 +327,121 @@ a {
   gap: 73px;
   align-items: center;
   padding-top: 60px;
+  overflow: hidden;
+}
+
+.action {
+  padding-top: 100px;
+}
+
+.action_section {
+  display: flex;
+  align-items: center;
+  gap: 90px;
+}
+.action_section .heading {
+  font-size: 38px;
+  width: 370px;
+  padding-bottom: 20px;
+  font-weight: 700;
+}
+
+.client_logo {
+  width: 100%;
+  transition: transform 0.5s ease;
+}
+.client_logo:hover {
+  transform: scale(1.1);
+}
+
+.check_icon {
+  font-size: 16px;
+  color: #FF7F57;
+}
+
+.list_item {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+}
+
+.list_text {
+  color: #13253A;
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 27px;
+}
+.list_text:hover {
+  text-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
+}
+
+.website {
+  background-color: #FF7F57;
+}
+.website .small_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.website .intro_text {
+  color: #fff;
+}
+.website .heading {
+  color: #fff;
+  font-size: 46px;
+  letter-spacing: -1px;
+  padding-bottom: 10px;
+  font-weight: 600;
+}
+.website .description {
+  color: #fff;
+  text-align: center;
+}
+
+.contact {
+  padding-top: 140px;
+  padding-bottom: 140px;
+  background-color: #11364e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form_title {
+  color: #fff;
+  text-align: center;
+  font-size: 38px;
+  font-weight: 400;
+  letter-spacing: -0.5px;
+  padding-bottom: 30px;
+}
+
+.form_list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form_item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+footer {
+  background-color: #13253a;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.copyright {
+  color: #fff;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 400;
+}
+.copyright:hover {
+  color: #ff0000;
 }
