--- a/Lesson_12/styles/main.css
+++ b/Lesson_12/styles/main.css
@@ -107,7 +107,7 @@ a {
   font-size: 17px;
   cursor: pointer;
   transition: all 0.5s ease-in;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 }
 .btn:hover {
   transform: translateX(10px);
@@ -213,7 +213,7 @@ textarea {
   color: #fff;
 }
 textarea:hover {
-  border-bottom: 1px solid #FF7F57;
+  border-bottom: 1px solid #fff;
 }
 textarea:hover::placeholder {
   color: #fff;
@@ -222,7 +222,7 @@ textarea:hover::placeholder {
 .hero {
   background-color: #f4f6f7;
   padding-top: 150px;
-  padding-bottom: 150px;
+  padding-bottom: 175px;
 }
 
 .hero_contents {
@@ -234,7 +234,6 @@ textarea:hover::placeholder {
   font-size: 46px;
   padding-bottom: 10px;
   letter-spacing: -1px;
-  font-weight: 700;
 }
 
 .column {
