--- a/Lesson_12/styles/_component.scss
+++ b/Lesson_12/styles/_component.scss
@@ -11,7 +11,7 @@
     font-size: 17px;
     cursor: pointer;
     transition: all 0.5s ease-in;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
 
     &:hover {
         transform: translateX(10px);
@@ -123,7 +123,7 @@ textarea {
     color: $light;
 
     &:hover {
-        border-bottom: 1px solid $action;
+        border-bottom: 1px solid $light;
     }
 
     &:hover::placeholder {
